# WindowsEdgeLight

./: .gitignore  CMakeLists.txt  DEVELOPER.md  ENHANCED_FEATURES.md  FEATURE_COMPARISON.md  IMPLEMENTATION_SUMMARY.md  MEMORY_IMPACT_ANALYSIS.md  NATIVE_VERSION.md  OPTIMIZATION_NOTES.md  OPTIMIZATION_README.md  OPTIMIZATION_SUMMARY.md  QUICKSTART_NATIVE.md  README.md  TESTING_CHECKLIST.md  TRANSPARENCY_FIX.md  WindowsEdgeLight.sln  build-native.ps1  build.ps1  main.cpp  main_d2d.cpp.bak  main_enhanced.cpp  measure-optimization.ps1  resource.h  test-native.ps1
.github/workflows/: build.yml
WindowsEdgeLight/: App.xaml.cs  ILLink.Substitutions.xml  MainWindow.xaml  MainWindow.xaml.cs  MonitorInfo.cs  WindowsEdgeLight.csproj  runtimeconfig.template.json
WindowsEdgeLightNative/: OPTIMIZATION_RESULTS.md  README.md  WindowsEdgeLightNative.rc  WindowsEdgeLightNative.vcxproj  resource.h
